--- a/app/views/home/_map.html.erb
+++ b/app/views/home/_map.html.erb
@@ -13,7 +13,7 @@
       <i class="fas fa-wine-glass-alt"></i><p>Gironde</p>
       <i class="fas fa-tree mt-2"></i><p>Charente</p>
       <i class="fas fa-water mt-2"></i><p>Charente-Martime</p>
-      <i class="fab fa-fort-awesome"></i><p>Dordogne</p>
+      <i class="fab fa-fort-awesome" id="apropos"></i><p>Dordogne</p>
     </div>
   </div>
 </div>
