--- a/app/views/home/_services.html.erb
+++ b/app/views/home/_services.html.erb
@@ -28,7 +28,7 @@
       <div class="col-md-4">
         <div class="info">
           <div class="icon icon-danger">
-            <i class="material-icons" id="apropos">shopping_cart</i>
+            <i class="material-icons">shopping_cart</i>
           </div>
           <h4 class="subtitle mt-3">Des besoins matériels</h4>
           <p>Machines à café, moulins, machines à glaçons, laves verres...</p>
