--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -132,6 +132,28 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col-md-5 ml-auto mr-auto">
+                <div class="card card-profile card-plain">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <div class="card-header card-header-image">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601657091/pape-clement_h2algd.jpg">
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h4 class="card-title">Château Pape Clement</h4>
+                        <h6 class="card-category text-muted">Agent Technico-Commercial</h6>
+                        <p class="card-description">
+                          2011 - 2013
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="tab-pane text-center collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="row">
