--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -16,8 +16,9 @@
             </div>
           </div>
         </div>
-        <div class="description text-center block">
+        <div class="description text-center block text-dark">
           <p>De formation supérieure, commerciale et technique, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été amené à évoluer au sein d'un environnement professionnelle, puis naturellement vers le CHR. </br>
+          <br/>
           J'ai tout de suite été séduit par la nature de cette relation saine et constructive. C'est grâce à mon expérience dans la maison Illy café, que j'ai découvert les subtilités de réalisation et l'importance de la qualité d'un café en restauration. Je propose donc de mettre mes compétences au service de votre machine traditionnelle et de votre café.</p>
         </div>
 
@@ -28,17 +29,17 @@
               <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
                 <li class="nav-item" id="headingOne">
                   <a class="nav-link active" href="#collapseOne" role="tab" data-toggle="tab" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    <i class="material-icons">camera</i> Mes Expériences
+                    <i class="material-icons">work</i> Mes Expériences
                   </a>
                 </li>
                 <li class="nav-item" id="headingTwo">
                   <a class="nav-link collapsed" href="#collapseTwo" role="tab" data-toggle="tab" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <i class="material-icons">palette</i> Mes Formations
+                    <i class="material-icons">article</i> Mes Formations
                   </a>
                 </li>
                 <li class="nav-item" id="headingThree">
                   <a class="nav-link collapsed" href="#collapseThree" role="tab" data-toggle="tab" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <i class="material-icons">favorite</i> Pourquoi CoffeeBreak ?
+                    <i class="material-icons">store</i> Pourquoi CoffeeBreak ?
                   </a>
                 </li>
               </ul>
@@ -116,7 +117,7 @@
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card-header card-header-image">
-                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1600906022/MondelezI_ufeboe.jpg">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_250/v1600906022/MondelezI_ufeboe.jpg">
                     </div>
                     </div>
                     <div class="col-md-7">
@@ -138,12 +139,12 @@
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card-header card-header-image">
-                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601657091/pape-clement_h2algd.jpg">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_fill,h_339,w_339/v1601908863/lyceepapeclement_iqivou.jpg">
                     </div>
                     </div>
                     <div class="col-md-7">
                       <div class="card-body">
-                        <h4 class="card-title">Château Pape Clement</h4>
+                        <h4 class="card-title">Lycée Pape Clement</h4>
                         <h6 class="card-category text-muted">Agent Technico-Commercial</h6>
                         <p class="card-description">
                           2011 - 2013
@@ -223,8 +224,13 @@
           </div>
           <div class="tab-pane text-center collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="row">
-              <div class="col-md-3 ml-auto">
-                <p>Pourquoi</p>
+              <div class="description text-dark col-md-10 ml-auto mr-auto">
+                <p>Durant mon expérience chez Illy Café, j'ai été amené à faire beaucoup d'interventions techniques lors de mes déplacements en clientèle. Je me suis donc aperçu que beaucoup de restaurateurs ne savent pas comment et pourquoi leur café change et se dérègle. </br>
+                <br/>
+                Le café est un produit primordial pour un restaurateur, il est le dernier goût de son client avant qu'il ne quitte l'établissement et il se doit d'être parfait.
+                <br/>
+                <br/>
+                Mon idée est donc de transmettre mes connaissances et de les mettre à disposition des professionnels de la restauration mais aussi des distributeurs de boissons qui fournissent souvent les machines traditionnelles.</p>
               </div>
             </div>
           </div>
