--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -3,7 +3,7 @@
       <nav class="float-left">
         <ul>
           <li>
-            <a href="https://www.creative-tim.com/presentation">
+            <a href="/mentions-legales">
               Mentions Légales
             </a>
           </li>
