add more experiences and works

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -105,7 +105,7 @@
                         <h4 class="card-title">VoxPro</h4>
                         <h6 class="card-category text-muted">French Account Manager</h6>
                         <p class="card-description">
-                          Janv. 2017 – Nov. 2017
+                          Janv. 2017 – Nov. 2017 en Irlande
                         </p>
                       </div>
                     </div>
@@ -125,7 +125,7 @@
                         <h4 class="card-title">Mondelez International</h4>
                         <h6 class="card-category text-muted">Chef de Secteur GMS</h6>
                         <p class="card-description">
-                          Oct. 2015 – Sept. 2016
+                          Oct. 2015 – Oct. 2016
                         </p>
                       </div>
                     </div>
@@ -134,20 +134,40 @@
               </div>
             </div>
             <div class="row">
+              <div class="col-md-5 mr-auto ml-auto">
+                <div class="card card-profile card-plain">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <div class="card-header card-header-image">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1602019397/bavaria_mgchtj.png">
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h4 class="card-title">Bavaria</h4>
+                        <h6 class="card-category text-muted">Responsable de Secteur (Proximité et GMS)</h6>
+                        <p class="card-description">
+                          Sept. 2013 – Sept. 2015
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="col-md-5 ml-auto mr-auto">
                 <div class="card card-profile card-plain">
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card-header card-header-image">
-                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_fill,h_339,w_339/v1601908863/lyceepapeclement_iqivou.jpg">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1602019396/foussier_uh9kuz.png">
                     </div>
                     </div>
                     <div class="col-md-7">
                       <div class="card-body">
-                        <h4 class="card-title">Lycée Pape Clement</h4>
-                        <h6 class="card-category text-muted">Agent Technico-Commercial</h6>
+                        <h4 class="card-title">Foussier</h4>
+                        <h6 class="card-category text-muted">Commercial Outillage</h6>
                         <p class="card-description">
-                          2011 - 2013
+                          Sept 2011 - Août 2013
                         </p>
                       </div>
                     </div>
@@ -163,7 +183,7 @@
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card-header card-header-image">
-                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601472075/idrac_otykrg.png">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_250/v1601472075/idrac_otykrg.png">
                     </div>
                     </div>
                     <div class="col-md-7">
@@ -183,7 +203,7 @@
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card-header card-header-image">
-                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601472075/idrac_otykrg.png">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_250/v1601472075/idrac_otykrg.png">
                     </div>
                     </div>
                     <div class="col-md-7">
@@ -205,7 +225,7 @@
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card-header card-header-image">
-                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/v1601472076/ifag_rsgjfd.jpg">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_scale,w_250/v1601472076/ifag_rsgjfd.jpg">
                     </div>
                     </div>
                     <div class="col-md-7">
@@ -214,6 +234,26 @@
                         <h6 class="card-category text-muted">Bachelor Management et Entreprenariat - Management de projet</h6>
                         <p class="card-description">
                           2013 – 2014
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-5 mr-auto ml-auto">
+                <div class="card card-profile card-plain">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <div class="card-header card-header-image">
+                        <img class="img mx-auto my-auto d-block" src="https://res.cloudinary.com/coffeebreak-pro/image/upload/c_fill,h_339,w_339/v1601908863/lyceepapeclement_iqivou.jpg">
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h4 class="card-title">Lycée Pape Clément</h4>
+                        <h6 class="card-category text-muted">BTS Technico-Commercial (Major de promotion)</h6>
+                        <p class="card-description">
+                          2011 - 2013
                         </p>
                       </div>
                     </div>
