--- a/app/assets/stylesheets/material/material-kit.css
+++ b/app/assets/stylesheets/material/material-kit.css
@@ -9854,7 +9854,7 @@ button:focus {
 }
 .btn.btn-success.btn-brown {
   color: #fff;
-  background-color: #522f1f;
+  background-color: rgb(82, 47, 31);
   border-color: #422619;
   box-shadow: 0 2px 2px 0 rgba(66, 38, 25, 0.14), 0 3px 1px -2px rgba(66, 38, 25, 0.14), 0 1px 5px 0 rgba(66, 38, 25, 0.14);
 }
@@ -9874,8 +9874,8 @@ button:focus {
 .btn.btn-success.focus,
 .btn.btn-success:hover {
   color: #fff;
-  background-color: #47a44b;
-  border-color: #39843c;
+  background-color: #522f1f;
+  border-color: #422619;
 }
 
 .btn.btn-success:active,
@@ -9883,9 +9883,9 @@ button:focus {
 .open>.btn.btn-success.dropdown-toggle,
 .show>.btn.btn-success.dropdown-toggle {
   color: #fff;
-  background-color: #47a44b;
-  border-color: #39843c;
-  box-shadow: 0 2px 2px 0 rgba(76, 175, 80, 0.14), 0 3px 1px -2px rgba(76, 175, 80, 0.2), 0 1px 5px 0 rgba(76, 175, 80, 0.12);
+  background-color: #522f1f;
+  border-color: #422619;
+  box-shadow: 0 2px 2px 0 rgba(66, 38, 25, 0.14), 0 3px 1px -2px rgba(66, 38, 25, 0.14), 0 1px 5px 0 rgba(66, 38, 25, 0.14);
 }
 
 .btn.btn-success:active:hover,
@@ -9901,8 +9901,8 @@ button:focus {
 .show>.btn.btn-success.dropdown-toggle:focus,
 .show>.btn.btn-success.dropdown-toggle.focus {
   color: #fff;
-  background-color: #47a44b;
-  border-color: #255627;
+  background-color: #522f1f;
+  border-color: #422619;
 }
 
 .open>.btn.btn-success.dropdown-toggle.bmd-btn-icon {
