fix Illycaffé and mentions

--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="col-md-12 ml-auto mr-auto text-center px-5">
       <h5 class="subtitle">Je m'appelle Raphaël Guinhut</h5>
-      <p>Suite à une belle expérience au sein de l'entreprise Illy Café, j'ai compris la part importante qu'occupait le café dans le milieu de la restauration.</p>
+      <p>Suite à une belle expérience au sein de l'entreprise Illycaffé, j'ai compris la part importante qu'occupait le café dans le milieu de la restauration.</p>
       <a href="/a-propos-de-moi" class="btn btn-lg btn-success text-center btn-brown" style="text-align: center; white-space:normal">En savoir plus sur mon parcours et mon entreprise</a>
   </div>
 </div>
