--- a/app/views/home/mentions.html.erb
+++ b/app/views/home/mentions.html.erb
@@ -13,7 +13,7 @@
                 <span style="font-size: 10pt;"><strong>Nationalité :</strong> Française</span><br>
                 <span style="font-size: 10pt;"><strong>Courriel :</strong> raphael.coffeebreak@gmail.com</span><br>
                 <span style="font-size: 10pt;"><strong>Numéro de téléphone :</strong> 06 58 01 53 11</span><br>
-                <span style="font-size: 10pt;"><strong>Activité (Code NAF ou APE)</strong> Autre mise à disposition de ressources humaines (7830Z)</span></p>
+                <span style="font-size: 10pt;"><strong>Activité (Code NAF ou APE)</strong>  Réparation de machines et équipements mécaniques (3312Z)</span></p>
               <h5 style="text-align: left;">CONCEPTION ET RÉALISATION</h5>
                 <p style="text-align: justify;">—<br>
                 <span style="font-size: 10pt;">Julien Anceau dont le siège social est situé 13, avenue de Techeney, 33370 Artigues-près-Bordeaux, courriel : jul33anc@gmail.com – n° Siret : 881920136 00010 - Site web : <a href="http://www.julienanceau.fr">http://www.julienanceau.fr</a></span></p>
