--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -19,7 +19,7 @@
         <div class="description text-center block text-dark">
           <p>De formation supérieure, commerciale et technique, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été amené à évoluer au sein d'un environnement professionnelle, puis naturellement vers le CHR. </br>
           <br/>
-          J'ai tout de suite été séduit par la nature de cette relation saine et constructive. C'est grâce à mon expérience dans la maison Illy café, que j'ai découvert les subtilités de réalisation et l'importance de la qualité d'un café en restauration. Je propose donc de mettre mes compétences au service de votre machine traditionnelle et de votre café.</p>
+          J'ai tout de suite été séduit par la nature de cette relation saine et constructive. C'est grâce à mon expérience dans la maison Illycaffé, que j'ai découvert les subtilités de réalisation et l'importance de la qualité d'un café en restauration. Je propose donc de mettre mes compétences au service de votre machine traditionnelle et de votre café.</p>
         </div>
 
       <div id="accordion">
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-md-7">
                       <div class="card-body">
-                        <h4 class="card-title">Illy Café</h4>
+                        <h4 class="card-title">Illycaffé</h4>
                         <h6 class="card-category text-muted">Chef de Secteur CHR</h6>
                         <p class="card-description">
                           Févr. 2018 – Oct. 2019
@@ -265,7 +265,7 @@
           <div class="tab-pane text-center collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="row">
               <div class="description text-dark col-md-10 ml-auto mr-auto">
-                <p>Durant mon expérience chez Illy Café, j'ai été amené à faire beaucoup d'interventions techniques lors de mes déplacements en clientèle. Je me suis donc aperçu que beaucoup de restaurateurs ne savent pas comment et pourquoi leur café change et se dérègle. </br>
+                <p>Durant mon expérience chez Illycaffé, j'ai été amené à faire beaucoup d'interventions techniques lors de mes déplacements en clientèle. Je me suis donc aperçu que beaucoup de restaurateurs ne savent pas comment et pourquoi leur café change et se dérègle. </br>
                 <br/>
                 Le café est un produit primordial pour un restaurateur, il est le dernier goût de son client avant qu'il ne quitte l'établissement et il se doit d'être parfait.
                 <br/>
