fix JulienAnceau footer

--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -10,7 +10,7 @@
         </ul>
       </nav>
       <div class="copyright float-right">
-        © <%= Date.today.year %>, créé par <a href="https://github.com/ZeddBox" target="_blank">ZedDv</a>.
+        © <%= Date.today.year %>, créé par <a href="https://github.com/ZeddBox" target="_blank">Julien Anceau</a>.
       </div>
     </div>
   </footer>
