--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="description text-center block text-dark">
-          <p>De formation supérieure, commerciale et technique, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été amené à évoluer au sein d'un environnement professionnelle, puis naturellement vers le CHR. </br>
+          <p>De formation supérieure, commerciale et technique, je me suis principalement orienté vers des postes de technico-commercial. J'ai ainsi été amené à évoluer au sein d'un environnement professionnel, puis naturellement vers le CHR. </br>
           <br/>
           J'ai tout de suite été séduit par la nature de cette relation saine et constructive. C'est grâce à mon expérience dans la maison Illycaffé, que j'ai découvert les subtilités de réalisation et l'importance de la qualité d'un café en restauration. Je propose donc de mettre mes compétences au service de votre machine traditionnelle et de votre café.</p>
         </div>
